# playground-eb8w0m4e

./: README.md  techio.yml
cpp-project/: CMakeLists.txt  run.sh  validate.sh
cpp-project/src/exercises/: hello_world.cpp  matmul.cpp  matmul.hpp  matmul1d.cpp  matmul2d.cpp  matmul2db.cpp
markdowns/: 1intro.md  3ola_mundo.md  4matmul2d.md  5matmul1d.md  6matmul2db.md  7final.md  configuration.md  hello_world.md  sandbox.md
